--- a/README
+++ b/README
@@ -1,24 +1,25 @@
-Assignment 4
+Assignment 5
 
 PARTNERS: Tim McLaughlin, Jo Booth
 
 Submitting:
-AUTHORS               glsupport.cpp
-LICENSE               glsupport.h
-Makefile              glsupport.o
-README                matrix4.h
-arcball.h             picker.cpp
-asst3.sln             picker.h
-asst4                 picker.o
-asst4-snippets.cpp    ppm.cpp
-asst4.cpp             ppm.h
-asst4.o               ppm.o
-asst4.vcxproj         quat.h
-asst4.vcxproj.filters rigtform.h
-asstcommon.h          scenegraph.cpp
-cvec.h                scenegraph.h
-drawer.h              scenegraph.o
-geometrymaker.h       shaders
+AUTHORS               glsupport.h
+LICENSE               glsupport.o
+Makefile              matrix4.h
+README                picker.cpp
+animation.txt         picker.h
+arcball.h             picker.o
+asst5                 ppm.cpp
+asst5-snippets.cpp    ppm.h
+asst5.cpp             ppm.o
+asst5.o               quat.h
+asst5.vcxproj         rigtform.h
+asst5.vcxproj.filters scenegraph.cpp
+asstcommon.h          scenegraph.h
+cvec.h                scenegraph.o
+drawer.h              sgfiller.h
+geometrymaker.h       sgutils.h
+glsupport.cpp         shaders
 
 Platforms:
   Ubuntu and OS X
@@ -33,7 +34,7 @@ Code Design:
   We just followed the design on the spec.
 
 Running program:
-  ./asst4, use same keybindings as solution binary.
+  ./asst5, use same keybindings and file format as solution binary.
 
 Exrta stuff:
   None.
